@@ -200,6 +200,7 @@
 #409#  "Keyboard Shortcuts"
 #410#  "Status"
 #411#  "Recompiler"
+#412#  "Defaults"
 
 //Plugin Dialog
 #420#  "About"
