@@ -1256,6 +1256,26 @@ BEGIN
     EDITTEXT        IDC_DD48_EDIT,87,226,39,10,ES_UPPERCASE | ES_AUTOHSCROLL,WS_EX_RIGHT
 END
 
+IDD_Settings_Defaults DIALOGEX 0, 0, 218, 169
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
+EXSTYLE WS_EX_CONTROLPARENT
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
+BEGIN
+    LTEXT           "Memory Size:",IDC_MEMORY_SIZE_TEXT,6,8,91,10
+    COMBOBOX        IDC_RDRAM_SIZE,102,6,109,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Use High Level GFX",IDC_HLE_GFX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,81,91,10
+    CONTROL         "Use TLB",IDC_USE_TLB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,102,58,91,10
+    LTEXT           "Vi Refresh Rate:",IDC_VIREFESH_TEXT,6,32,91,10
+    EDITTEXT        IDC_VIREFRESH,102,30,109,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "AI Count Per Byte:",IDC_COUNTPERBYTE_TEXT,6,45,91,10
+    EDITTEXT        IDC_COUNTPERBYTE,102,44,109,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Counter Factor:",IDC_COUNTFACT_TEXT,6,19,91,10
+    COMBOBOX        IDC_COUNTFACT,102,18,109,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "32 Bit Engine",IDC_ROM_32BIT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,58,91,10
+    CONTROL         "Fixed Audio Timing",IDC_ROM_FIXEDAUDIO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,69,91,10
+    CONTROL         "Sync using Audio",IDC_SYNC_AUDIO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,102,69,91,10
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1669,6 +1689,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 219
     END
+
+    IDD_Settings_Defaults, DIALOG
+    BEGIN
+        LEFTMARGIN, 4
+        RIGHTMARGIN, 216
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 163
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -1846,6 +1874,11 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 100,
     0, 0, 0, 0
+END
+
+IDD_Settings_Defaults AFX_DIALOG_LAYOUT
+BEGIN
+    0
 END
 
 
